# theatron

./: Cargo.toml  LICENSE  README.md  nixos-module.nix
docs/plans/: 2026-04-07-track-d-theatron-web-ui.md
docs/specs/: 2026-04-07-track-d-theatron-web-ui.md
frontend/: age-decrypt.js  app.js  browser.js  dashboard.js  exports.js  index.html  settings.js  terminal.js  theme.css
src/: api.rs  index.rs  main.rs  manifest.rs  stream.rs
stitch/dashboard/: code.html
stitch/dashboard_updated_name/: code.html
stitch/export_download/: code.html
stitch/export_download_updated_name/: code.html
stitch/neon_protocol/: DESIGN.md
stitch/network_status_config/: code.html
stitch/session_browser/: code.html
stitch/session_browser_updated_name/: code.html
stitch/session_viewer/: code.html
stitch/session_viewer_updated_name/: code.html
stitch/the_admin_deck_admin_dashboard/: code.html
stitch/the_gatekeeper_login_theme/: code.html
stitch/the_hub_main_dashboard/: code.html
stitch/the_terminal_log_blog/: code.html
