[package]
name = "theatron"
version = "0.1.0"
edition = "2024"
description = "Web-based session recording playback with client-side age decryption"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
inotify = "0.11"
age = { version = "0.11", default-features = false }
hex = "0.4"
